--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ p {
   margin-top: 15px;
 }
 .chat_login {
-  margin-top: 15px 5px 0 5px;
+  margin: 15px 5px 0 5px;
 }
 .avatar {
   position: relative;
@@ -187,10 +187,6 @@ textarea.form-control:focus {
 }
 .btn_change {
   display: none;
-  /* margin-bottom: 4px;
-  padding: 4px 8px;
-  background-color: #ffffff;
-  border: 1px solid #eeeeee; */
   color: #fff;
   cursor: pointer;
   position: absolute;
